# StudyBuddy

./: .env  .gitattributes  .gitignore  package-lock.json  package.json  tags  tags.temp.tmp.tmp.tmp
VideoGo/: go.mod  gudie.md  main.go
VideoGo/server/: signaling.go
VideoGo/ss/: 2024-05-31_21-13.png_
backend/chat_server/: Cargo.toml
backend/chat_server/src/: handler.rs  main .rs  main.rs  state.rs  store.rs
backend/server/: Cargo.toml  \
backend/server/src/: auth.rs  chat.rs  chat.sh  community_post.rs  main.rs  models.rs  posts.rs  router.rs  smtp.rs
backend/server/src/auth/: auth_middleware.rs  jwt.rs  login.rs  register.rs
backend/server/src/models/: community_post_schema.rs  login_user.rs  otp.rs  update.rs  user.rs
backend/server/src/posts/: comment.rs  downvote.rs  hot_posts.rs  most_liked.rs  post.rs  trending_posts.rs  upvote.rs
backend/server/src/response/: app_error.rs
backend/server/src/router/: auth.rs
backend/server_cp/: cp.js  index.js  package-lock.json  package.json
backend/server_cp/mongo/: package-lock.json  package.json  server.js
client/: :w  \  ]  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
client/VideochatServer/: index.js  package-lock.json  package.json
client/src/: App.tsx  Layout.tsx  LoginPage.css  ProtectedRoutes.tsx  Router.tsx  main.tsx
client/src/NavBar/: NavBar.tsx
client/src/assets/: desktop.ini
client/src/components/: Home1.tsx  Home2.tsx  Home3.tsx  Home4.tsx  LoginPage.tsx  NavBar.tsx  Navigation.tsx  Register.tsx  RegisterPage.tsx  communityPost.tsx  profile.tsx
client/src/context/: AuthContext.tsx  ProfileContext.tsx  SocketProvider.tsx  contextapi.tsx  profile.tsx
client/src/pages/: ChatForm.tsx  ChatRoom.tsx  CommunityPost.tsx  Home1.tsx  Home2.tsx  Home3.tsx  Home4.tsx  Landing.tsx  LandingPage.tsx  LoginPage.tsx  NavBar.tsx  PostForm.tsx  SideBar.tsx  VerificationPage.tsx  chat.tsx  chatinput.tsx  chatlobby.tsx  comment.tsx  profile.tsx
client/src/service/: peer.tsx
client/src/styles/: App.css  Label.css  LoginPage.css  comp.css  (+2 more)
server/: .gitignore
server/auth/: Cargo.toml
server/auth/src/: main.rs
src/: App.tsx  Register.css  index.css  main.tsx
src/components/: LoginPage.tsx  NavBar.tsx  Register.tsx
(+18 files in other folders)
