[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
tower = "0.4.13"
serde_json = "1.0.116"
serde = { version = "1.0", features = ["derive"] }
